compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/EnumNameOverride.java
public enum EnumNameOverride /* EnumNameOverride*/ implements Bar {
  ;

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride valueOf(java.lang.String) throws java.lang.IllegalArgumentException, java.lang.NullPointerException;//  valueOf(java.lang.String)

  @org.jetbrains.annotations.NotNull()
  public static EnumNameOverride[] values();//  values()

  private  EnumNameOverride();//  .ctor()
}
